@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<schema targetNamespace="urn:oasis:names:tc:wsrp:v1:types" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://www.w3.org/2001/XMLSchema" xmlns:types="urn:oasis:names:tc:wsrp:v1:types" elementFormDefault="qualified">
+	<complexType name="RegistrationState">
+		<sequence>
+			<element name="registration" type="xsd:base64Binary" minOccurs="0"/>
+		</sequence>
+	</complexType>
+	<element name="Registration" type="types:RegistrationState"/>
+</schema>
